Added glmnet in other topics, fixed some stuff in lab 2 and 3

--- a/1. R Basic/notes.html
+++ b/1. R Basic/notes.html
@@ -184,7 +184,7 @@ hljs.initHighlightingOnLoad();
 <body>
 <h1>Introduction to R</h1>
 
-<h2>Outlines of this lab</h2>
+<h2>Outline of this lab</h2>
 
 <ol>
 <li>Install R and RStudio</li>
@@ -594,14 +594,14 @@ reg$coeffcients
 <pre><code class="r">rnorm(10)
 </code></pre>
 
-<pre><code>##  [1] -1.12477  1.63574 -1.03804 -0.39557 -0.04274  2.24396  0.99305
-##  [8] -0.06239  0.49142  0.99132
+<pre><code>##  [1] -0.30486 -0.60954  0.63655 -0.22525 -0.15961 -0.59302 -0.84441
+##  [8]  0.01125 -1.03056  0.02179
 </code></pre>
 
 <pre><code class="r">rnorm(n = 10, mean = 100, sd = 20)
 </code></pre>
 
-<pre><code>##  [1] 105.91 125.56 137.31 124.81 108.38  67.21  70.15 136.59  71.80  91.81
+<pre><code>##  [1] 139.66  76.91 178.20 105.37 134.49 111.23 103.07 105.10 111.67  87.58
 </code></pre>
 
 <h3>Functions</h3>
@@ -645,7 +645,7 @@ reg$coeffcients
 <li>Where to ask questions?
 
 <ul>
-<li>Stackoverflow: <a href="http://stackoverflow.com/questions/tagged/r">http://stackoverflow.com/questions/tagged/r</a></li>
+<li>Stackoverflow (a more friendly place): <a href="http://stackoverflow.com/questions/tagged/r">http://stackoverflow.com/questions/tagged/r</a></li>
 <li>R Help Mailing List: <a href="http://r.789695.n4.nabble.com/R-help-f789696.html">http://r.789695.n4.nabble.com/R-help-f789696.html</a></li>
 </ul></li>
 </ol>
